tests/negative/typecheck/void_assign.orng
// void_assign.orng:6:20: error: cannot assign a value of type `Int` to type `Void`
//     let x: Void = 0
//                   ^
// 
fn main() -> Int {
    let x: Void = 0
    x
}